# image-captioning-backend

./: .gitignore  Makefile  README.md  backend.dev.dockerfile  backend.prod.dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
app/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py  0002_auto_20210413_0621.py  0003_auto_20210413_0634.py  0004_auto_20210427_1804.py  0005_auto_20210427_2140.py  0006_auto_20210428_0812.py  0007_auto_20210428_1045.py  0008_delete_userfollowing.py  0009_auto_20210428_1151.py  0010_profile_followers.py  (+1 more)
app/app/: asgi.py  settings.py  storage_backends.py  types.py  urls.py
app/images/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
app/reports/: admin.py  models.py  serializers.py
app/scripts/: entrypoint.dev.sh  entrypoint.prod.sh
backend/backend/: settings.py  urls.py
backend/images/: admin.py  models.py  serializers.py  views.py
dev/: backend.dev.dockerfile  docker-compose.dev.yml  docker-compose.test.yml  postgres.dockerfile
dev/db_backup/: db_backup.sql
nginx/: nginx.conf  nginx.dockerfile
prod/: .dockerignore  backend.dockerfile  backend.prod.dockerfile  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh  sample.env
prod/ecs/: ecs_service.json  task_definition.json
prod/nginx/: nginx.dockerfile
scripts/: entrypoint.dev.sh  entrypoint.sh  entrypoint.test.sh
test/: .env.test  backend.test.dockerfile  docker-compose.test.yml
(+69 files in other folders)
