[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kyle1297 <kyle.griffin.1297@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
